--- a/.build/users/index.html
+++ b/.build/users/index.html
@@ -1,6 +1,1 @@
-<html>
-<head><title>hello users</title></head>
-<body>
-    hello static users
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8" /><title>Users title</title><meta name="keywords" content=""></head><body><div id="react"></div><script src="/assets/js/user.js"></script></body></html>
